correcting z-index

--- a/Bootsrap-Installation/TinDog-Start-master/css/styles.css
+++ b/Bootsrap-Installation/TinDog-Start-master/css/styles.css
@@ -33,6 +33,8 @@ h2{
     width:60%;
     transform: rotate(25deg);
     margin:1rem 0;
+    z-index:-1;
+    
 }
 
 /* Navigation Bar */
@@ -72,9 +74,7 @@ p{
     padding:7% 15%;
     background-color :#fff;
     margin-top:-100px;
-    
-    
-    
+    position:relative;
 }
 
 .feature-box{
